manifests/lab-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lab-app
  template:
    metadata:
      labels:
        app: lab-app
    spec:
      containers:
        - name: lab-app
          image: us-central1-docker.pkg.dev/ops-lab-506804/lab-images/lab-app
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              memory: 64Mi
