manifests/lab-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-app
spec:
  type: ClusterIP
  selector:
    app: lab-app
  ports:
    - port: 80
      targetPort: 8080
